
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {scalar_t__ reseed_counter; scalar_t__ reseed_interval; scalar_t__* counter; int aes_ctx; scalar_t__ prediction_resistance; } ;
typedef TYPE_1__ mbedtls_ctr_drbg_context ;


 int MBEDTLS_AES_ENCRYPT ;
 int MBEDTLS_CTR_DRBG_BLOCKSIZE ;
 size_t MBEDTLS_CTR_DRBG_MAX_INPUT ;
 size_t MBEDTLS_CTR_DRBG_MAX_REQUEST ;
 int MBEDTLS_CTR_DRBG_SEEDLEN ;
 int MBEDTLS_ERR_CTR_DRBG_INPUT_TOO_BIG ;
 int MBEDTLS_ERR_CTR_DRBG_REQUEST_TOO_BIG ;
 int block_cipher_df (unsigned char*,unsigned char const*,size_t) ;
 int ctr_drbg_update_internal (TYPE_1__*,unsigned char*) ;
 int mbedtls_aes_crypt_ecb (int *,int ,scalar_t__*,unsigned char*) ;
 int mbedtls_ctr_drbg_reseed (TYPE_1__*,unsigned char const*,size_t) ;
 int memcpy (unsigned char*,unsigned char*,size_t) ;
 int memset (unsigned char*,int ,int) ;

int mbedtls_ctr_drbg_random_with_add( void *p_rng,
                              unsigned char *output, size_t output_len,
                              const unsigned char *additional, size_t add_len )
{
    int ret = 0;
    mbedtls_ctr_drbg_context *ctx = (mbedtls_ctr_drbg_context *) p_rng;
    unsigned char add_input[MBEDTLS_CTR_DRBG_SEEDLEN];
    unsigned char *p = output;
    unsigned char tmp[MBEDTLS_CTR_DRBG_BLOCKSIZE];
    int i;
    size_t use_len;

    if( output_len > MBEDTLS_CTR_DRBG_MAX_REQUEST )
        return( MBEDTLS_ERR_CTR_DRBG_REQUEST_TOO_BIG );

    if( add_len > MBEDTLS_CTR_DRBG_MAX_INPUT )
        return( MBEDTLS_ERR_CTR_DRBG_INPUT_TOO_BIG );

    memset( add_input, 0, MBEDTLS_CTR_DRBG_SEEDLEN );

    if( ctx->reseed_counter > ctx->reseed_interval ||
        ctx->prediction_resistance )
    {
        if( ( ret = mbedtls_ctr_drbg_reseed( ctx, additional, add_len ) ) != 0 )
            return( ret );

        add_len = 0;
    }

    if( add_len > 0 )
    {
        block_cipher_df( add_input, additional, add_len );
        ctr_drbg_update_internal( ctx, add_input );
    }

    while( output_len > 0 )
    {



        for( i = MBEDTLS_CTR_DRBG_BLOCKSIZE; i > 0; i-- )
            if( ++ctx->counter[i - 1] != 0 )
                break;




        mbedtls_aes_crypt_ecb( &ctx->aes_ctx, MBEDTLS_AES_ENCRYPT, ctx->counter, tmp );

        use_len = ( output_len > MBEDTLS_CTR_DRBG_BLOCKSIZE ) ? MBEDTLS_CTR_DRBG_BLOCKSIZE :
                                                       output_len;



        memcpy( p, tmp, use_len );
        p += use_len;
        output_len -= use_len;
    }

    ctr_drbg_update_internal( ctx, add_input );

    ctx->reseed_counter++;

    return( 0 );
}
